# mlb-analytics-platform

./: .gitignore  =2.0  README.md  check_db.py  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DECISIONS.md  DEVLOG.md
src/mlb/: __init__.py  main.py
src/mlb/config/: __init__.py  settings.py
src/mlb/db/: __init__.py  models.py  pool.py
src/mlb/discord_bot/: __init__.py  bot.py  channels.py  formatter.py  publisher.py
src/mlb/evaluation/: __init__.py  backtest.py  calibration.py  clv.py  metrics.py  persistence.py
src/mlb/ingestion/: __init__.py  base.py  cache.py  games.py  lineups.py  odds.py  stats.py  weather.py
src/mlb/models/: __init__.py  features.py  player_features.py  player_props.py  registry.py  team_runs.py
src/mlb/odds/: __init__.py  best_line.py  devig.py  edge.py  persistence.py
src/mlb/operations/: backfill.py
src/mlb/payments/: __init__.py  checkout.py  server.py  sync.py  webhooks.py
src/mlb/scheduler/: __init__.py  cron.py  events.py  gate.py  pipeline.py
src/mlb/simulation/: __init__.py  engine.py  markets.py  persistence.py
tests/: __init__.py  conftest.py  test_backfill.py  test_config.py  test_discord.py  test_edge.py  test_evaluation.py  test_ingestion.py  test_payments.py  test_player_props.py  test_scheduler.py  test_schema.py  test_simulation.py  test_team_runs.py
tests/fixtures/: boxscore_full_lineup.json  boxscore_game_live.json  boxscore_partial.json  boxscore_with_bench.json  boxscore_with_relievers.json  gamelog_hitting.json  gamelog_pitching.json  gamelog_twoway.json
(+10 files in other folders)
